--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -60,8 +60,8 @@ body {
 		height: 100%;
 		@include mt;
 		// background-color: $body-color;
-		background-color: rgba($body-color, 0.8);
-		backdrop-filter: blur(5px);
+		background-color: rgba(0, 0, 0, 0.5);
+		backdrop-filter: blur(20px);
 		opacity: 0;
 		z-index: -1;
 		// left: 200px;
@@ -75,6 +75,10 @@ body {
 		overflow: hidden;
 	}
 
+	.fancybox__backdrop {
+		backdrop-filter: blur(20px);
+	}
+
 	&.fixed {
 		overflow: hidden;
 		position: absolute;
@@ -85,7 +89,7 @@ body {
 
 		&::before {
 			z-index: 999;
-			opacity: 0.76;
+			opacity: 1;
 		}
 	}
 }
