--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -8,8 +8,8 @@ mixin footer()
 							+icon('logo-top')
 						+b.label 
 								span Работаем с&nbsp;2012 года
-					a.btn.btn-primary.btn-sm(href="#") Вызвать замерщика 
-				.col-lg-2.ml-auto
+					+e.btn.btn.btn-primary.btn-sm(href="#") Вызвать замерщика 
+				.col-6.col-md-4.col-lg-2.ml-lg-auto
 					h6 Компания
 					ul
 						li
@@ -20,7 +20,7 @@ mixin footer()
 							a(href="#") Отзывы
 						li
 							a(href="#") Блог
-				.col-lg-2
+				.col-6.col-md-4.col-lg-2
 					h6 Навесы
 					ul
 						li
@@ -39,7 +39,7 @@ mixin footer()
 							a(href="#") Для бассейна
 						li
 							a(href="#") Ангар
-				.col-lg-3
+				+e.col.col-md-4.col-lg-2
 					h6 Производим также
 					ul
 						li
