--- a/sourse/pug/pages/03-portfolio.pug
+++ b/sourse/pug/pages/03-portfolio.pug
@@ -58,6 +58,8 @@ block pagecontent
 	//- 	+sCertificates()
 	//- 	+sCatalogProd()
 	//- .section-wrapper
+	+sContact()
+	.section-wrapper
 		+footer()
 	//- +sForm()
 
