--- a/sourse/pug/blocks/sCalculator/_sCalculator.scss
+++ b/sourse/pug/blocks/sCalculator/_sCalculator.scss
@@ -1,14 +1,120 @@
 // start .sCalculator
 .sCalculator {
-		// --sPT: ;
-		// --sPB: ;
-		// --sTPB: ;
-	
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	// --sPT: ;
+	// --sPB: ;
+	// --sTPB: ;
+	.form-wrap {
+		position: relative;
+		border-radius: 20px;
+		overflow: hidden;
+		border: 1px solid $light;
+		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
+		form {
+			@include media-breakpoint-up(md) {
+				display: grid;
+				grid-template-columns: 48.7% 51.3%;
+			}
+		}
+		h4 {
+			color: $white;
+		}
+		h6 {
+			font-weight: 500;
+			line-height: 150%;
+		}
+		table {
+			font-size: rem(12);
+			line-height: 115%;
+			color: $black;
+			width: 100%;
+			tr {
+				&:last-child {
+					td {
+						border-bottom: none;
+					}
+				}
+				td {
+					border-bottom: 1px solid $info;
+					&:last-child {
+						text-align: right;
+					}
+				}
+			}
+		}
+		&__img-wrap {
+		}
+		&__slide {
+			max-width: rem(95);
+		}
+		&__part {
+			padding: rem(16);
+			max-width: 100%;
+			@include media-breakpoint-up(lg) {
+				padding: rem(20) rem(24) rem(30);
+			}
+			.row {
+				--bs-gutter-x: #{rem(8)};
+				--bs-gutter-y: var(--bs-gutter-x);
+				@include media-breakpoint-up(lg) {
+					--bs-gutter-x: #{rem(16)};
+				}
+			}
+			picture {
+				@include block(462, 342);
+				max-width: rem(462);
+				margin-left: auto;
+				margin-right: auto;
+				img {
+					position: absolute;
+					left: 0;
+					top: 0;
+				}
+			}
+			&:first-child {
+				background-color: $secondary;
+				color: $white;
+				.small {
+				}
+			}
+			&:nth-child(2) {
+				h6 {
+					margin-bottom: 0;
+				}
+			}
+			&:nth-child(3) {
+				@include media-breakpoint-up(md) {
+					grid-column: 2 / 3;
+					grid-row: 2 / 3;
+				}
+			}
+			&:last-child {
+				background-color: $secondary;
+				@include media-breakpoint-up(md) {
+					grid-column: 1 / 2;
+					grid-row: 2 / 3;
+				}
+				h6 {
+					color: $white;
+				}
+			}
+		}
+		&__btn {
+			@extend .btn, .btn-primary, .btn-lg, .with-shadow;
+			width: 100%;
+		}
+	}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sCalculator
