--- a/sourse/pug/blocks/sCalculator/_sCalculator.scss
+++ b/sourse/pug/blocks/sCalculator/_sCalculator.scss
@@ -50,7 +50,10 @@
 			padding: rem(16);
 			max-width: 100%;
 			@include media-breakpoint-up(lg) {
-				padding: rem(20) rem(24) rem(30);
+				padding: rem(20);
+			}
+			@include media-breakpoint-up(xl) {
+				padding: rem(24);
 			}
 			.row {
 				--bs-gutter-x: #{rem(8)};
