--- a/sourse/pug/blocks/sCalculator/_sCalculator.scss
+++ b/sourse/pug/blocks/sCalculator/_sCalculator.scss
@@ -9,6 +9,12 @@
 		overflow: hidden;
 		border: 1px solid $light;
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
+		margin-left: -17px;
+		margin-right: -17px;
+		@include media-breakpoint-up(sm) {
+			margin-left: 0;
+			margin-right: 0;
+		}
 		form {
 			@include media-breakpoint-up(md) {
 				display: grid;
@@ -43,12 +49,11 @@
 		}
 		&__img-wrap {
 		}
-		&__slide {
-			max-width: rem(95);
-		}
+		
 		&__part {
 			padding: rem(16);
 			max-width: 100%;
+			overflow: hidden;
 			@include media-breakpoint-up(lg) {
 				padding: rem(20);
 			}
@@ -105,7 +110,42 @@
 			@extend .btn, .btn-primary, .btn-lg, .with-shadow;
 			width: 100%;
 		}
+		&__slider {
+			overflow: visible;
+			@include media-breakpoint-up(md) {
+				overflow: hidden;
+			}
+		}
+		&__slide {
+			height: auto;
+			max-width: rem(95);
+		}
+		&__item {
+			height: 100%;
+			label {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				text-align: center;
+				padding: rem(22) rem(8) rem(10);
+				border: 2px solid $primary;
+				border-radius: 10px;
+				height: inherit;
+				img {
+					max-width: 100%;
+					height: rem(42);
+					margin-bottom: rem(15);
+				}
+				span {
+					display: block;
+					font-size: rem(10);
+					line-height: 135%;
+					flex-grow: 1;
+				}
+			}
+		}
 	}
+
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
