--- a/sourse/pug/pages/03-portfolio.pug
+++ b/sourse/pug/pages/03-portfolio.pug
@@ -29,7 +29,7 @@ block pagecontent
 	//- +mob-mnu()
 	+header()
 	+top-nav()
-	//- +topLine()
+	+topLine()
 	+page-head({
 		title
 	})
@@ -61,7 +61,7 @@ block pagecontent
 	.section-wrapper
 		+footer()
 	//- +sForm()
-
+	+scrollToTop()
 
 
 
