--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -15,6 +15,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(22,16)*1em;
 }
+.icon-arrow-up {
+	font-size:math.div(15,10)*1rem;
+	width: math.div(14,15)*1em;
+}
 .icon-basket {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(22,24)*1em;
