--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -188,3 +188,38 @@
 		}
 	}
 }
+
+
+.back-top {
+	a {
+		@include mt;
+		position: fixed;
+		right: rem(33);
+		bottom: rem(144);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		&:hover {
+			.icon {
+				box-shadow: 1px 3px 16px 0px #0000003b;
+			}
+		}
+	}
+	.icon {
+		@include mt;
+		stroke: $secondary;
+		width: rem(50);
+		height: rem(50);
+		background-color: $info;
+		font-size: rem(12);
+		stroke-width: 2px;
+		padding: rem(18);
+		border-radius: 50%;
+		margin-bottom: rem(6);
+	}
+	span {
+		color: $secondary;
+		font-size: rem(10);
+		font-weight: 600;
+	}
+}
