--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -1,5 +1,11 @@
 // start .sContact
 .sContact {
+	--sPT: #{rem(32)};
+	--sPB: #{rem(32)};
+	@include media-breakpoint-up(lg) {
+		--sPT: #{rem(80)};
+		--sPB: #{rem(90)};
+	}
 	h2 {
 		margin-bottom: rem(32);
 		@include media-breakpoint-up(lg) {
