--- a/sourse/pug/blocks/sProducts/_sProducts.pug
+++ b/sourse/pug/blocks/sProducts/_sProducts.pug
@@ -6,7 +6,7 @@ mixin sProducts(data)
 			+select('', 'Цене 🡩', 'Цене 🡫')
 		.row
 			.col-md-6
-				+e.card
+				+b.card
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
@@ -30,7 +30,7 @@ mixin sProducts(data)
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
 			.col-md-6
-				+e.card
+				+b.card
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
@@ -54,7 +54,7 @@ mixin sProducts(data)
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
 			.col-md-6
-				+e.card
+				+b.card
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
@@ -78,7 +78,7 @@ mixin sProducts(data)
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
 			.col-md-6
-				+e.card
+				+b.card
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
@@ -102,7 +102,7 @@ mixin sProducts(data)
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
 			.col-md-6
-				+e.card
+				+b.card
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
@@ -126,7 +126,7 @@ mixin sProducts(data)
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
 			.col-md-6
-				+e.card
+				+b.card
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
