--- a/sourse/pug/pages/03-portfolio-2.pug
+++ b/sourse/pug/pages/03-portfolio-2.pug
@@ -16,8 +16,9 @@ include ../blocks/sContact/_sContact.pug
 //- include ../blocks/sAccordion/_sAccordion.pug
 //- include ../blocks/sCertificates/_sCertificates.pug
 //- include ../blocks/sFilter/_sFilter.pug
-//- include ../blocks/sProducts/_sProducts.pug
+include ../blocks/sProducts/_sProducts.pug
 include ../blocks/sSpecifications/_sSpecifications.pug
+include ../blocks/sSimilarAwnings/_sSimilarAwnings.pug
 
 
 block variables
@@ -36,6 +37,7 @@ block pagecontent
 		title
 	})
 	+sSpecifications('btn')
+	+sSimilarAwnings()
 	//- +headerBlock()
 	//- +sCatalog()
 	//- .section-wrapper
