--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -176,8 +176,22 @@
 			color: $primary;
 		}
 	}
+	&__wrap {
+		display: flex;
+	}
 	h1 {
 		margin-bottom: 0;
+	}
+	p {
+		margin-left: rem(30);
+		font-weight: 700;
+		color: $info;
+		margin-bottom: 0;
+		align-self: end;
+		font-size: rem(14);
+		@include media-breakpoint-up(lg) {
+			font-size: rem(18);
+		}
 	}
 }
 
@@ -189,16 +203,27 @@
 	}
 }
 
+.reviews-page {
+	.page-head {
+		@include media-breakpoint-up(lg) {
+			padding-bottom: rem(57);
+		}
+	}
+}
 
 .back-top {
 	a {
 		@include mt;
 		position: fixed;
-		right: rem(33);
-		bottom: rem(144);
+		right: rem(15);
+		bottom: rem(18);
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		@include media-breakpoint-up(lg) {
+			right: rem(33);
+			bottom: rem(144);
+		}
 		&:hover {
 			.icon {
 				box-shadow: 1px 3px 16px 0px #0000003b;
