--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -15,6 +15,7 @@ include ../blocks/sAbout/_sAbout.pug
 include ../blocks/sAdvantages/_sAdvantages.pug
 include ../blocks/sAccordion/_sAccordion.pug
 include ../blocks/sCertificates/_sCertificates.pug
+include ../blocks/sSpecifications/_sSpecifications.pug 
 
 block variables
 	- let  mainPage= 'main-page' 
