--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
@@ -5,6 +5,11 @@ mixin sPortfolio(data)
 			+b.section-title.text-center
 				h4 Портфолио
 				h2 Мы&nbsp;изготовили и&nbsp;установили более 1500 навесов с&nbsp;2012 года
-				
 			.row
+				.col-12
+					+sSpecifications()
+				.col-12
+					+sSpecifications2()
+				.col-12
+					+sSpecifications3()
 	// end sPortfolio
