--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
@@ -12,4 +12,8 @@ mixin sPortfolio(data)
 					+sSpecifications2()
 				.col-12
 					+sSpecifications3()
+				.col
+					+e.btn-wrap
+						button.btn.btn-primary Показать еще
+						button.btn.btn-outline-secondary Смотреть всё портфолио
 	// end sPortfolio
