--- a/sourse/pug/blocks/sSpecifications/_sSpecifications.scss
+++ b/sourse/pug/blocks/sSpecifications/_sSpecifications.scss
@@ -71,6 +71,7 @@
 			width: 50%;
 			font-size: rem(12);
 			padding: 8px 0;
+			line-height: 1.15em;
 			&:first-child {
 				color: rgba(44, 52, 64, 0.7);
 			}
