--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.scss
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.scss
@@ -11,6 +11,27 @@
 		--sPB: #{rem(24)};
 		border-radius: rem(20);
 	}
+	&__btn-wrap {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		button {
+			&:first-child {
+				margin-bottom: rem(20);
+				width: 100%;
+				max-width: rem(213);
+				font-size: rem(12);
+				padding: rem(12);
+				@include media-breakpoint-up(lg) {
+					margin-bottom: rem(48);
+				}
+			}
+			&:last-child {
+				width: 100%;
+				max-width: rem(370);
+			}
+		}
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
