--- a/sourse/pug/pages/05-thanks.pug
+++ b/sourse/pug/pages/05-thanks.pug
@@ -1,8 +1,8 @@
 extends layout/main.pug
 
 
-include ../blocks/sContent/_sContent.pug
-include ../blocks/sContact/_sContact.pug
+//- include ../blocks/sContent/_sContent.pug
+//- include ../blocks/sContact/_sContact.pug
 //- include ../blocks/sCatalog/_sCatalog.pug
 //- include ../blocks/sPortfolio/_sPortfolio.pug
 //- include ../blocks/sDesign/_sDesign.pug
@@ -15,27 +15,21 @@ include ../blocks/sContact/_sContact.pug
 //- include ../blocks/sAdvantages/_sAdvantages.pug
 //- include ../blocks/sAccordion/_sAccordion.pug
 //- include ../blocks/sCertificates/_sCertificates.pug
-//- include ../blocks/sFilter/_sFilter.pug 
-include ../blocks/sClientsReviews/_sClientsReviews.pug 
-
+include ../blocks/sThanks/_sThanks.pug 
 
 block variables
-	- let  mainPage= 'reviews-page' 
+	- let  mainPage= null 
 	- let  bg= null
 
 block title
-	- let  title= 'Отзывы'
+	- let  title= 'Спасибо'
 	title= title
 block pagecontent
 	//- +mob-mnu()
 	+header()
 		+top-nav()
 		+topLine()
-	+page-head({
-		title,
-		text: 'Всего 237 отзывов'
-	})
-	+sClientsReviews()
+	+sThanks()
 	//- +headerBlock()
 	//- +sCatalog()
 	//- .section-wrapper
@@ -53,12 +47,12 @@ block pagecontent
 	//- 	+sAccordion()
 	//- 	+sCertificates()
 	//- 	+sCatalogProd()
+	//- +sContact()
 	//- .section-wrapper
-	+sContact()
-	.section-wrapper
-		+footer()
-	//- +sForm()
-	+scrollToTop()
+	//- 	+footer()
+	//- //- +sForm()
+	//- +scrollToTop()
+
 
 
 
