--- a/sourse/pug/blocks/sThanks/_sThanks.scss
+++ b/sourse/pug/blocks/sThanks/_sThanks.scss
@@ -130,9 +130,14 @@
 		@extend .btn, .btn-primary, .btn-sm;
 		padding-top: rem(9);
 		padding-bottom: rem(9);
+		&:after {
+			content: "";
+			@include a-cent;
+		}
 	}
 	&__link {
 		@extend .btn, .btn-light;
+		position: relative;
 		display: flex;
 		flex-direction: column;
 		height: 100%;
