--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -12,34 +12,34 @@ mixin sContact()
 						//- <div id="map"style="width:100%; height:360px"></div>
 						<script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 						script.
-							const map = document.querySelector('#map');
-							document.addEventListener('DOMContentLoaded', function(event) {
-								ymaps.ready(init);
-							});
-							function init () {
-									//- var center = [55.75322550427434,37.65589449999999];
-									var center = [56.01248606874105,37.48441499999996];
-									var myMap = new ymaps.Map("map", {
-													center: center,
-													zoom: 17
-											}),
-											myPlacemark = new ymaps.Placemark([56.01248606874105,37.48441499999996], {
-													// Чтобы балун и хинт открывались на метке, необходимо задать ей определенные свойства.
-													balloonContentHeader: "",
-													balloonContentBody: "Лобня • ул. Маяковского, д. 5",
-													balloonContentFooter: "",
-													hintContent: "Адрес"
-											});
-									myMap.geoObjects.add(myPlacemark);
+							//- const map = document.querySelector('#map');
+							//- document.addEventListener('DOMContentLoaded', function(event) {
+							//- 	ymaps.ready(init);
+							//- });
+							//- function init () {
+							//- 		//- var center = [55.75322550427434,37.65589449999999];
+							//- 		var center = [56.01248606874105,37.48441499999996];
+							//- 		var myMap = new ymaps.Map("map", {
+							//- 						center: center,
+							//- 						zoom: 17
+							//- 				}),
+							//- 				myPlacemark = new ymaps.Placemark([56.01248606874105,37.48441499999996], {
+							//- 						// Чтобы балун и хинт открывались на метке, необходимо задать ей определенные свойства.
+							//- 						balloonContentHeader: "",
+							//- 						balloonContentBody: "Лобня • ул. Маяковского, д. 5",
+							//- 						balloonContentFooter: "",
+							//- 						hintContent: "Адрес"
+							//- 				});
+							//- 		myMap.geoObjects.add(myPlacemark);
 
-									myMap.behaviors.disable('scrollZoom');
-									//на мобильных устройствах... (проверяем по userAgent браузера)
-									if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
-									//... отключаем перетаскивание карты
-										myMap.behaviors.disable('drag');
-									}
-									// Добавляем все метки на карту.
-								};
+							//- 		myMap.behaviors.disable('scrollZoom');
+							//- 		//на мобильных устройствах... (проверяем по userAgent браузера)
+							//- 		if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
+							//- 		//... отключаем перетаскивание карты
+							//- 			myMap.behaviors.disable('drag');
+							//- 		}
+							//- 		// Добавляем все метки на карту.
+							//- 	};
 				.col-lg-5.col-xxl-4
 					+e.info
 						+b.locaton-dropdown.dropdown
@@ -74,17 +74,17 @@ mixin sContact()
 						a(href="mailto:info@naves-na-zakaz.ru") info@naves-na-zakaz.ru
 					+e.wrap
 						h5 Офисы и цеха
-						+e.map-point
+						+e.map-point(data-mark="56.01248606874105,37.48441499999996" data-zoom="17")
 							| Лобня • ул. Маяковского, д. 5
-						+e.map-point
+						+e.map-point(data-mark="55.67169106905855,37.2928495" data-zoom="10")
 							| Одинцово • ул. Транспортная, д. 2
-						+e.map-point
+						+e.map-point(data-mark="54.822272569867756,38.150632499999915" data-zoom="22")
 							| Кашира • ул. Стрелецкая, д. 66
-						+e.map-point
+						+e.map-point(data-mark="55.749850568991356,38.64405949999995" data-zoom="17")
 							| Фатеево • городской округ Павловский Посад, д. 118
-						+e.map-point
+						+e.map-point(data-mark="56.349454568379294,36.75054550000001" data-zoom="17")
 							| Клин • ул. Дурыманова, д. 24
-						+e.map-point
+						+e.map-point(data-mark="56.316543568414716,38.15373199999991" data-zoom="17")
 							| Сергиев Посад • ул. Стахановская, д. 1Б
 			+form-wrap()
 				.row
