--- a/sourse/pug/pages/02-blogs.pug
+++ b/sourse/pug/pages/02-blogs.pug
@@ -15,15 +15,18 @@ include ../blocks/sContact/_sContact.pug
 //- include ../blocks/sAdvantages/_sAdvantages.pug
 //- include ../blocks/sAccordion/_sAccordion.pug
 //- include ../blocks/sCertificates/_sCertificates.pug
-include ../blocks/sFilter/_sFilter.pug
+//- include ../blocks/sFilter/_sFilter.pug
 include ../blocks/sProducts/_sProducts.pug
+include ../blocks/sSpecifications/_sSpecifications.pug
+include ../blocks/sSimilarAwnings/_sSimilarAwnings.pug
+
 
 block variables
-	- let  mainPage= 'portfolio-page' 
+	- let  mainPage= 'blog'
 	- let  bg= null
 
 block title
-	- let  title= 'Портфолио'
+	- let  title= 'Блог компании «Навес на заказ»'
 	title= title
 block pagecontent
 	//- +mob-mnu()
@@ -32,32 +35,9 @@ block pagecontent
 		+topLine()
 	+page-head({
 		title,
-		btn: 'btn'
+		menu: 'menu',
+		search:'search'
 	})
-	.container
-		.row.justify-content-between
-			.col-lg-3
-				+sFilter()
-			.col-lg-8
-				+sProducts()
-	//- +headerBlock()
-	//- +sCatalog()
-	//- .section-wrapper
-	//- 	+sPortfolio()
-	//- +sDesign()
-	//- +sCalculator()
-	//- .section-wrapper
-	//- 	+sTypical()
-	//- 	+sPriceList()
-	//- +sReviews()
-	//- +sStages()
-	//- .section-wrapper
-	//- 	+sAbout()
-	//- 	+sAdvantages()
-	//- 	+sAccordion()
-	//- 	+sCertificates()
-	//- 	+sCatalogProd()
-	//- .section-wrapper
 	+sContact()
 	.section-wrapper
 		+footer()
