--- a/sourse/pug/pages/03-portfolio-2.pug
+++ b/sourse/pug/pages/03-portfolio-2.pug
@@ -34,7 +34,8 @@ block pagecontent
 		+top-nav()
 		+topLine()
 	+page-head({
-		title
+		title,
+		btn: 'btn'
 	})
 	+sSpecifications('btn')
 	+sSimilarAwnings()
