--- a/sourse/pug/pages/04-reviews.pug
+++ b/sourse/pug/pages/04-reviews.pug
@@ -33,7 +33,8 @@ block pagecontent
 		+topLine()
 	+page-head({
 		title,
-		text: 'Всего 237 отзывов'
+		text: 'Всего 237 отзывов',
+		btn: 'btn'
 	})
 	+sClientsReviews()
 	//- +headerBlock()
