--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -99,6 +99,10 @@
 	font-size:math.div(57,10)*1rem;
 	width: math.div(258,57)*1em;
 }
+.icon-search {
+	font-size:math.div(17,10)*1rem;
+	width: math.div(16,17)*1em;
+}
 .icon-telegram {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
