--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -39,8 +39,20 @@ mixin catalogItem(i, h, p)
 mixin page-head(data)
 	+b.page-head
 		.container
-			a(href="#")
-				+icon('arrow-left')
+			+e.row.row
+				if data.btn
+					.col-auto
+						+e.arrow-back(href="#")
+							+icon('arrow-left')
+				if data.menu
+					.col-auto
+						span КАТЕГОРИИ
+				if data.search
+					.col-sm
+						+b.search-field
+							input(type='text' name='search' placeholder='Поиск по блогу' aria-label='Search through site content')
+							button
+								+icon('search')
 			+e.wrap
 				h1!= data.title
 				if data.text
