--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -20,10 +20,10 @@ block title
 	- let  title= 'Модальные окна'
 	title= title
 block pagecontent
-	+mob-mnu()
-	//- +header()
-	+top-nav()
-	//- +topLine()
+	//- +mob-mnu()
+	+header()
+		+top-nav()
+		+topLine()
 	.section.container
 		.row
 			mixin btn(id, name)
